--- a/part_4/style.css
+++ b/part_4/style.css
@@ -13,10 +13,61 @@
     margin-top: 500px;
 }
 #one {
-    width: 100px;
-    height: 50px;
+    width: 400px;
+    height: 300px;
     background-color: brown;
     text-align: center;
     margin: 10px auto;
     box-shadow: 2px 2px 10px pink;
+    background-image: url("cup4.jpg");
+    background-size: cover;
+}
+/* card */
+.card {
+    height: 300px;
+    width: 300px;
+    border: 2px solid black;
+    border-radius: 7px;
+    display: inline-block;
+    margin: 10px;
+    text-align: center;
+    transition: 1s ;
+    box-shadow: 0px 4px 8px black;
+    
+}
+img {
+    width: 100%;
+    height: 70%;
+    border-radius: 5px 5px 0 0; 
+}
+.card:hover {
+    box-shadow: 0px 8px 16px black;
+}
+/* position */
+.position {
+    height: 100px;
+    width: 100px;
+    background-color: green;
+    text-align: center;
+    border: 3px solid black;
+    margin: 20px;
+    display: inline-block;
+}
+#position_static {
+    background-color: blue;
+    position: static;
+    top: 100px;
+    left: 100px;
+}
+#position_relative {
+    background-color: blue;
+    position: relative;
+    top: 100px;
+    left: 100px;
+}
+#position_absolute {
+    background-color: rgb(255, 0, 115);
+    position: absolute;
+    top: 100px;
+    left: 100px;
 }
