--- a/part_6/style.css
+++ b/part_6/style.css
@@ -3,8 +3,15 @@
     width: 600px;
     background-color: rgb(132, 132, 34);
     display: grid;
-    grid-template-rows: 50px 50px 50px;
-    grid-template-columns: 100px 100px 100px;
+    /* grid template */
+    /* grid-template-rows: 50px 50px 50px;
+    grid-template-columns: 100px 100px 100px; */
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 10px;
+/*     
+    justify-items: start;
+    align-items: center; */
+    place-items: center;
 }
 .item {
     width: 100px;
@@ -12,5 +19,37 @@
     background-color: cadetblue;
     border: 2px solid black;
     text-align: center;
+    
+}
+#one {
 
+    grid-column: 1 / span 5;
+    grid-row: 1 / span 3;
+    /* justify-self: center; */
+    /* align-self: flex-start; */
+    place-self: center;;
+}
+
+#fontAnimation {
+    height: 100px;
+    width: 300px;
+    background-color: cornflowerblue;
+
+    /* Animation */
+    animation-name: fontAnimation;
+    animation-duration: 3s;
+    animation-timing-function: ease-in;
+    animation-delay: 0;
+    animation-iteration-count: 2;
+    animation-direction: normal;
+
+}
+
+@keyframes fontAnimation {
+    from {
+        font-size: 20px;
+    }
+    to {
+        font-size: 40px;
+    }
 }
