--- a/part_6/style.css
+++ b/part_6/style.css
@@ -54,8 +54,30 @@
     }
 }
 
-@media(width: 400px) {
-    #fontAnimation {
-        background-color: blue;
+@media(min-width: 200px) and (max-width:700px){
+    .media {
+        background-color: green;
     }
+}
+@media (orientation: portrait) {
+    .media {
+        color: rgb(11, 28, 43);
+    }
+}
+
+#sampleOne {
+    height: 100px;
+    width: 100px;
+    background-color: chartreuse;
+    position: relative;
+    z-index: 0;
+
+}
+#sampleTwo {
+    height: 100px;
+    width: 100px;
+    background-color: red;
+    position: relative;
+    bottom: 50px;
+    z-index: -1;
 }
