--- a/mini-project/style.css
+++ b/mini-project/style.css
@@ -11,28 +11,34 @@
     
 }
 
-.btn_one {
+.btn_one i {
     color: white;
     font-size: 30px;
     font-weight: 800;
     position: absolute;
     left: 16px;
     line-height: 60px;
+    cursor: pointer;
+    transition: all 0.3s linear;
+
 }
 
 .sidebar_menu {
     position: fixed;
+    left: -300px;
     height: 100vh;
     width: 300px;
     background-color: rgba(255, 255, 255, 0.1);
     box-shadow: 0 0 6px rgba(255, 255, 255, 0.5);
+    transition: all 0.3s linear;
 }
 
 .sidebar_menu .logo {
     position: absolute;
     width: 100%;
     line-height: 60px;
-    box-shadow: 0 0 4px rgba(255, 255, 255, 0.5);
+    box-shadow: 0 2px 4px rgba(255, 255, 255, 0.5);
+    height: 60px;
 }
 .sidebar_menu .logo a {
     position: absolute;
@@ -42,13 +48,16 @@
     font-size: 20px;
     font-weight: 600;
 }
-.sidebar_menu .btn_two {
+.sidebar_menu .btn_two i{
     color: grey;
     font-size: 30px;
     line-height: 60px;
     position: absolute;
     left: 270px;
     opacity: 0;
+    cursor: pointer;
+    transition: all 0.3s linear;
+
 }
 
 .sidebar_menu .menu {
@@ -86,4 +95,30 @@
 }
 #check {
     display: none;
+}
+/* hover effect for smooth transition */
+.sidebar_menu .menu li:hover {
+    box-shadow: 0 0 4px rgba(255, 255, 255, 0.5);
+
+}
+.btn_one i:hover {
+    font-size: 40px;
+}
+.btn_two i:hover {
+    font-size: 35px;
+}
+.sidebar_menu .social_media i:hover {
+    opacity: 1;
+    transform: scale(1.2);
+}
+#check:checked ~ .sidebar_menu {
+    left: 0;
+}
+
+#check:checked ~ .btn_one i {
+    opacity: 0;
+}
+
+#check:checked ~ .sidebar_menu .btn_two i {
+    opacity: 1;
 }
